force-app/main/default/objects/Credit_Check_Logged__e/fields/Access_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Access_Timestamp__c</fullName>
    <description>When the access occurred, stamped by the publisher. Deliberately not the subscriber's clock: the subscriber runs asynchronously and could be seconds or minutes later.</description>
    <label>Access Timestamp</label>
    <type>DateTime</type>
</CustomField>