force-app/main/default/objects/Credit_Check_Logged__e/fields/Accessed_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Accessed_By_Id__c</fullName>
    <description>The running user who triggered the pull. Carried in the payload because a platform event trigger executes as the Automated Process user, so the subscriber cannot recover the accessor from its own context.</description>
    <label>Accessed By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>