force-app/main/default/objects/Credit_Check_Logged__e/fields/Accessed_By_Username__c.field-meta.xml
<CustomField>
    <fullName>Accessed_By_Username__c</fullName>
    <description>Username at the time of access, denormalised so the audit row identifies the accessor without depending on the User lookup resolving.</description>
    <label>Accessed By Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>