force-app/main/default/objects/Credit_Check_Logged__e/fields/Credit_Check_Id__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Id__c</fullName>
    <description>Id allocated to the Credit Check being logged. May not resolve by the time the subscriber runs — that is the rollback case this design exists for — so the subscriber checks existence before setting the lookup.</description>
    <label>Credit Check Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>