force-app/main/default/objects/Credit_Check_Logged__e/fields/Credit_Check_Reference__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Reference__c</fullName>
    <description>Bureau enquiry reference (EQFX-CRI-yyyymmdd-nnnnnn). The durable business key for the access: unlike the record Id, it stays meaningful after a rollback.</description>
    <label>Credit Check Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>