force-app/main/default/objects/Credit_Check_Logged__e/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <description>Score returned by the enquiry being logged. Null is legitimate — a failed bureau call is still an access that must be audited.</description>
    <label>Credit Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>