force-app/main/default/objects/Credit_Check_Logged__e/fields/Loan_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Id__c</fullName>
    <description>Id of the application the pull was made for. Carried as text, not a lookup: platform events cannot hold relationships, and the subscriber must be able to record the access even when this Id no longer resolves.</description>
    <label>Loan Application Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>