force-app/main/default/objects/Credit_Check_Logged__e/fields/Loan_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Number__c</fullName>
    <description>LA-000X at the time of access. Denormalised so the audit row stays readable if the application is later deleted at retention expiry.</description>
    <label>Loan Application Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>