force-app/main/default/objects/Credit_Check_Logged__e/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Why the CRI data was accessed, e.g. Credit assessment. Distinct from Access Type, which records the mechanism (Pull or View) rather than the reason.</description>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>